Fix page-hero and page-content spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -83,7 +83,7 @@
     }
 
     .page-hero {
-      @apply bg-gradient-to-b from-neutral-focus to-neutral p-8 -m-8 md:p-12 md:-m-12 text-white xl:-mx-24 xl:-my-16 xl:px-24 xl:py-16;
+      @apply bg-gradient-to-b from-neutral-focus to-neutral p-8 -mx-8 -mt-8 md:p-12 md:-mx-12 md:-mt-12 text-white xl:-mx-24 xl:-mt-16 xl:px-24 xl:py-16;
 
       .definition {
         @apply border-b text-gray-400 border-gray-600 border-t my-8 pb-6 pt-4;
